[package]
name = "desktop2mqtt"
description = "A daemon to integrate any pc into your home automation system."
version = "0.1.0"
authors = ["Max Jöhnk <maxjoehnk@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT"

[dependencies]
log = "0.4"
env_logger = "0.8"
tokio = { version = "1", features = ["fs", "rt-multi-thread", "sync", "signal", "time"] }
mqtt-async-client = "0.2"
user-idle = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.8"
anyhow = "1"
futures-util = "0.3"
structopt = "0.3"
directories-next = "2"
notify-rust = "4"
systemstat = "0.1"
humantime-serde = "1"

[package.metadata.deb]
section = "utility"
priority = "optional"
assets = [
    ["target/release/desktop2mqtt", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/desktop2mqtt/README", "644"],
]
depends = "$auto"
extended-description = """\
A daemon to integrate any pc into your home automation system.\
Primarily intended for [Home Assistant](https://home-assistant.io)."""
